--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -233,7 +233,7 @@ span.post-read {
 
 span.post-read-more {
     align-items: center;
-    display: inline-block;
+    /*display: inline-block;*/
     float: right;
     margin-top: 8px;
 }
