--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -104,6 +104,10 @@ section.recent-posts {
     }
 }
 
+ul.navbar-nav {
+  margin-top: 10px;
+}
+
 .listfeaturedtag {
     border: 1px solid rgba(0, 0, 0, .125);
     border-radius: .25rem;
