--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -7,7 +7,7 @@ title: Archive
 ================================================== -->
 <section class="recent-posts">
 <div class="section-title">
-    <h2>Archive of posts with <span>{{ page.type }} '{{ page.title }}'</span></h2>
+    <h2>Archive of posts with <span>{{ page.type }} '{{ page.title }}{{ page.date | date: "%Y" }}'</span></h2>
 </div>
 <div class="row listrecent">
 
@@ -16,17 +16,6 @@ title: Archive
     {% include postbox.html %}
 
 {% endfor %}
-
-<h1>Archive of posts from {{ page.date | date: "%Y" }}</h1>
-
-<ul class="posts">
-{% for post in page.posts %}
-  <li>
-    <span class="post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
-    <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-  </li>
-{% endfor %}
-</ul>
 
 </div>
 </section>
