disable year archive

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,13 +70,13 @@
                 <!-- Begin Menu -->
 
                 <ul class="navbar-nav ml-auto">
-
+                <!-- NOT WORKING IN GITHUB PAGES, jekyll-archives GEM NOT ALLOWED
                     {% for year in (2008..2019) %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ site.baseurl }}/year/{{ year }}">{{ year }}</a>
                     </li>
                     {% endfor %}
-
+                -->
                     <li class="nav-item">
                         <a class="nav-link" href="{{ site.baseurl }}/about">About</a>
                     </li>
